--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.12",
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
     "rxjs": "~6.5.4",
