--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.12",
     "@angular/router": "~9.1.12",
     "@fortawesome/fontawesome-free": "^5.13.1",
+    "bootstrap": "^4.5.0",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
     "rxjs": "~6.5.4",
