--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
@@ -21,6 +22,7 @@
     "@angular/router": "~8.2.14",
     "@fortawesome/fontawesome-free": "^5.13.1",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
     "rxjs": "~6.4.0",
