--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "@fortawesome/fontawesome-free": "^5.13.1",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.9.3",
+    "file-saver": "^2.0.2",
+    "jspdf": "^1.5.3",
+    "jspdf-autotable": "^3.5.6",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "xlsx": "^0.16.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
