--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jspdf-autotable": "^3.5.6",
     "primeicons": "^4.0.0",
     "primeng": "^9.1.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "xlsx": "^0.16.3",
